k8s/development/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: worker-app-service
  namespace: development

spec:
  selector:
    app: worker-app

  ports:
  - port: 80
    targetPort: 8080

  type: LoadBalancer
