k8s/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: worker-app
  namespace: development

spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: worker-app-service
            port:
              number: 80
